<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity.SplashActivity">

    <LinearLayout
        android:id="@+id/top_ll"
        android:layout_marginTop="@dimen/size_100dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/login_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!--<LinearLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:gravity="center"-->
            <!--android:orientation="horizontal"-->
            <!--android:padding="@dimen/size_10dp">-->

            <!--<View-->
                <!--android:layout_width="100dp"-->
                <!--android:layout_height="2dp"-->
                <!--android:background="@color/black" />-->

            <!--<TextView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_gravity="center"-->
                <!--android:layout_marginLeft="@dimen/size_20dp"-->
                <!--android:layout_marginRight="@dimen/size_20dp"-->
                <!--android:gravity="center"-->
                <!--android:text="campus"-->
                <!--android:textSize="@dimen/text_size_22_sp"-->
                <!--android:textStyle="bold" />-->

            <!--<View-->
                <!--android:layout_width="100dp"-->
                <!--android:layout_height="2dp"-->
                <!--android:background="@color/black" />-->
        <!--</LinearLayout>-->
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="@dimen/size_40dp"
        android:orientation="vertical"
        android:layout_below="@+id/top_ll"
        android:id="@+id/input_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/input_field_background"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/size_20dp"
            android:layout_marginRight="@dimen/size_20dp"
            android:padding="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:adjustViewBounds="true"
                android:src="@drawable/email_icon" />

            <EditText
                android:textColor="@color/appColor"
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/hint_email"
                android:imeOptions="actionDone"
                android:includeFontPadding="true"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:singleLine="true"
                android:textColorHint="@color/ashTextColor"
                android:textSize="@dimen/text_size_12_sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/input_field_background"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/size_20dp"
            android:layout_marginRight="@dimen/size_20dp"
            android:padding="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:adjustViewBounds="true"
                android:src="@drawable/lock_icon" />

            <EditText
                android:textColor="@color/appColor"
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/hint_password"
                android:imeOptions="actionDone"
                android:includeFontPadding="true"
                android:inputType="textPassword"
                android:padding="10dp"
                android:singleLine="true"
                android:textColorHint="@color/ashTextColor"
                android:textSize="@dimen/text_size_12_sp" />
        </LinearLayout>
        <RelativeLayout
            android:layout_marginTop="15dp"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size_20dp"
            android:layout_marginRight="@dimen/size_20dp">
            <CheckBox
                android:id="@+id/rememberMe"
                android:layout_alignParentLeft="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remember_me"/>

            <TextView
                android:id="@+id/tv_forget_password"
                android:textColor="@color/appColor"
                android:layout_centerInParent="true"
                android:layout_alignParentRight="true"
                android:text="@string/forget_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </RelativeLayout>


        <Button
            android:textStyle="bold"
            android:layout_marginTop="@dimen/size_40dp"
            android:layout_marginLeft="@dimen/size_20dp"
            android:layout_marginRight="@dimen/size_20dp"
            android:layout_width="match_parent"
            android:id="@+id/login"
            android:layout_height="wrap_content"
            android:background="@drawable/selected"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_25_sp" />

        <RelativeLayout
            android:layout_marginTop="@dimen/size_40dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size_20dp"
            android:layout_marginRight="@dimen/size_20dp">
            <TextView
                android:paddingTop="2dp"
                android:textSize="@dimen/text_size_14_sp"
                android:id="@+id/ask"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/do_not_have_account"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="@dimen/size_5dp"
                android:layout_marginTop="0dp"
                android:layout_toEndOf="@+id/ask"
                android:text="@string/register_here"
                android:textColor="@color/appColor"
                android:textSize="@dimen/size_16sp"
                android:textStyle="bold" />

        </RelativeLayout>

    </LinearLayout>

    <TextView
        android:textColor="@color/appColor"
        android:layout_marginBottom="@dimen/size_20dp"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:text="@string/copyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>