<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".fragment.TeacherAddCourseFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/size_10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/size_20dp"
                android:layout_marginTop="@dimen/size_10dp"
                android:text="Course Name"
                android:textColor="@color/appColor" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/size_20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="@dimen/size_20dp"
                android:background="@drawable/input_field_background"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="10dp">

                <EditText
                    android:id="@+id/courseName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/hint_course_name"
                    android:imeOptions="actionDone"
                    android:includeFontPadding="true"
                    android:inputType="textEmailAddress"
                    android:padding="5dp"
                    android:singleLine="true"
                    android:textColor="@color/appColor"
                    android:textColorHint="@color/ashColor"
                    android:textSize="@dimen/text_size_18_sp" />
            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/size_10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/size_20dp"
                android:layout_marginTop="@dimen/size_10dp"
                android:text="@string/course_code"
                android:textColor="@color/appColor" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/size_20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="@dimen/size_20dp"
                android:background="@drawable/input_field_background"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="10dp">

                <EditText
                    android:id="@+id/courseCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/hint_course_code"
                    android:imeOptions="actionDone"
                    android:includeFontPadding="true"
                    android:inputType="textEmailAddress"
                    android:padding="5dp"
                    android:singleLine="true"
                    android:textColor="@color/appColor"
                    android:textColorHint="@color/ashColor"
                    android:textSize="@dimen/text_size_18_sp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/size_10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/size_20dp"
                android:layout_marginTop="@dimen/size_10dp"
                android:text="Credit Point"
                android:textColor="@color/appColor" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/size_20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="@dimen/size_20dp"
                android:background="@drawable/input_field_background"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="10dp">

                <EditText
                    android:id="@+id/credit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/hint_credit_point"
                    android:imeOptions="actionDone"
                    android:includeFontPadding="true"
                    android:inputType="textEmailAddress"
                    android:padding="5dp"
                    android:singleLine="true"
                    android:textColor="@color/appColor"
                    android:textColorHint="@color/ashColor"
                    android:textSize="@dimen/text_size_18_sp" />
            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_40dp"
            android:layout_marginTop="@dimen/size_40dp"
            android:layout_marginEnd="@dimen/size_40dp"
            android:background="@drawable/app_button_bg"
            android:padding="@dimen/size_10dp"
            android:text="Add"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_23_sp"
            android:textStyle="bold" />

    </LinearLayout>
</ScrollView>